Add initial biflow implementation
